--- a/css/blog.css
+++ b/css/blog.css
@@ -190,6 +190,20 @@ header img {
   margin: auto;
   margin-top: 100px;
 }
+.footer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.28px;
+  text-align: center;
+  color: #3b3b3b;
+  background-color: #f2f2f2;
+}
 .error {
   transition: 0.3s;
   transform: translateY(-100%);
