--- a/#source/style.scss
+++ b/#source/style.scss
@@ -42,6 +42,12 @@ body {
   -webkit-text-size-adjust: 100%;
   background-color: #fff;
   scroll-behavior: smooth;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 input,
@@ -633,6 +639,10 @@ $Merriweather: "Merriweather";
       letter-spacing: 0.24px;
       text-align: center;
       color: #898888;
+      transition: 0.2s;
+    }
+    &:hover span {
+      transform: scale(200%);
     }
   }
 
@@ -879,6 +889,33 @@ $Merriweather: "Merriweather";
   .img-title {
     margin: 70px 0;
     font-size: 50px;
+  }
+}
+.thanks {
+  transition: 0.3s;
+  transform: translateY(-100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  span {
+    width: 200px;
+    padding: 0 10px;
+    height: 50px;
+    background-color: #fff;
+    color: rgb(83, 189, 101);
+    font-family: "Roboto";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   }
 }
 @keyframes main-block-text-anim {
