--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ body {
   -webkit-text-size-adjust: 100%;
   background-color: #fff;
   scroll-behavior: smooth;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 input,
@@ -807,6 +812,13 @@ h6 {
   letter-spacing: 0.24px;
   text-align: center;
   color: #898888;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.contact-block__img-small:hover span {
+  -webkit-transform: scale(200%);
+          transform: scale(200%);
 }
 
 .contact-block__form {
@@ -1118,6 +1130,48 @@ h6 {
 .read-more-main .img-title {
   margin: 70px 0;
   font-size: 50px;
+}
+
+.thanks {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.thanks span {
+  width: 200px;
+  padding: 0 10px;
+  height: 50px;
+  background-color: #fff;
+  color: #53bd65;
+  font-family: "Roboto";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 18px;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 @-webkit-keyframes main-block-text-anim {
